add-reads for surefire tests