@@ -52,8 +52,7 @@ Licensed under the MIT License.
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl.controller.request=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.clienttelemetry=ALL-UNNAMED
-      --add-opens io.netty.transport.epoll/io.netty.channel.epoll=ALL-UNNAMED
-      --add-modules=io.netty.transport.epoll
+      --add-reads io.netty.channel.epoll=ALL-UNNAMED
     </javaModulesSurefireArgLine>
     <codesnippet.skip>false</codesnippet.skip>
     <javadocDoclet></javadocDoclet>
